[metadata]
name = customlib
version = 1.1.0
author = Claudiu DRUG
author_email = claudiu.drug@outlook.com
description = Custom library.
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
    cryptography == 36.0.1
    keyring == 23.5.0
    pywin32 == 303
