[metadata]
name = customlib
version = 4.3.0
author = Claudiu DRUG
author_email = claudiu.drug@outlook.com
description = Custom library.
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
install_requires =
    cryptography == 36.0.1
    keyring == 23.5.0
    pywin32 == 303
    pytz == 2022.1
